--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "msp430fr6972"
 version = "0.1.0"
 authors = ["chrismolli <molliere.c@gmail.com>"]
 edition = "2018"
+description = "PAC for MSP430FR6972"
+license = "MIT"
+homepage = "https://github.com/chrismolli/msp430fr6972"
+documentation = "https://github.com/chrismolli/msp430fr6972"
+repository = "https://github.com/chrismolli/msp430fr6972"
+readme = "README.md"
 
 [dependencies]
 bare-metal = "0.2.0"
